Harden Supabase schema compatibility and document MVP relationships