@@ -1,120 +1,112 @@
 package com.inventory.service;
 
 import com.inventory.dto.StockDTO;
-import com.inventory.model.Stock;
-import com.inventory.repository.StockRepository;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicLong;
 
 @Service
-@Transactional
 public class StockService {
-    
-    private final StockRepository stockRepository;
-    
-    public StockService(StockRepository stockRepository) {
-        this.stockRepository = stockRepository;
-    }
-    
+
+    private final Map<Long, StockDTO> stocks = new ConcurrentHashMap<>();
+    private final AtomicLong idGenerator = new AtomicLong(1);
+
     public List<StockDTO> getAllStocks() {
-        return stockRepository.findAll()
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        return stocks.values().stream()
+                .sorted(Comparator.comparing(StockDTO::getId))
+                .toList();
     }
-    
-    @SuppressWarnings("null")
+
     public StockDTO getStockById(Long id) {
-        Stock stock = stockRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Stock not found with id: " + id));
-        return convertToDTO(stock);
+        StockDTO stock = stocks.get(id);
+        if (stock == null) {
+            throw new RuntimeException("Stock not found with id: " + id);
+        }
+        return stock;
     }
-    
+
     public StockDTO getStockByDesignName(String designName) {
-        Stock stock = stockRepository.findByDesignName(designName)
+        return stocks.values().stream()
+                .filter(stock -> stock.getDesignName() != null
+                        && stock.getDesignName().equalsIgnoreCase(designName))
+                .findFirst()
                 .orElseThrow(() -> new RuntimeException("Stock not found with design name: " + designName));
-        return convertToDTO(stock);
     }
-    
+
     public List<StockDTO> searchStocks(String searchTerm) {
-        return stockRepository.searchStocks(searchTerm)
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        String q = searchTerm.toLowerCase();
+        return stocks.values().stream()
+                .filter(stock -> containsIgnoreCase(stock.getDesignName(), q)
+                        || containsIgnoreCase(stock.getSize(), q)
+                        || containsIgnoreCase(stock.getType(), q))
+                .sorted(Comparator.comparing(StockDTO::getId))
+                .toList();
     }
-    
+
     public List<StockDTO> getLowStockItems(Integer threshold) {
-        return stockRepository.findLowStockItems(threshold)
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        return stocks.values().stream()
+                .filter(stock -> stock.getTotalBoxes() != null && stock.getTotalBoxes() < threshold)
+                .sorted(Comparator.comparing(StockDTO::getId))
+                .toList();
     }
-    
-    @SuppressWarnings("null")
+
     public StockDTO createStock(StockDTO stockDTO) {
-        Stock stock = convertToEntity(stockDTO);
-        Stock savedStock = stockRepository.save(stock);
-        return convertToDTO(savedStock);
-    }
-    
-    @SuppressWarnings("null")
-    public StockDTO updateStock(Long id, StockDTO stockDTO) {
-        Stock stock = stockRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Stock not found with id: " + id));
-        
-        stock.setDesignName(stockDTO.getDesignName());
-        stock.setSize(stockDTO.getSize());
-        stock.setType(stockDTO.getType());
-        stock.setTotalBoxes(stockDTO.getTotalBoxes());
-        stock.setPricePerBox(stockDTO.getPricePerBox());
-        
-        Stock updatedStock = stockRepository.save(stock);
-        return convertToDTO(updatedStock);
-    }
-    
-    @SuppressWarnings("null")
-    public void deleteStock(Long id) {
-        Stock stock = stockRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Stock not found with id: " + id));
-        stockRepository.delete(stock);
-    }
-    
-    public Integer getTotalStocks() {
-        return (int) stockRepository.count();
-    }
-    
-    public Integer getLowStockCount(Integer threshold) {
-        return stockRepository.findLowStockItems(threshold).size();
-    }
-    
-    private StockDTO convertToDTO(Stock stock) {
-        return new StockDTO(
-                stock.getId(),
-                stock.getDesignName(),
-                stock.getSize(),
-                stock.getType(),
-                stock.getTotalBoxes(),
-                stock.getPricePerBox(),
-                stock.getCategoryId(),
-                stock.getCreatedAt(),
-                stock.getUpdatedAt()
-        );
-    }
-    
-    private Stock convertToEntity(StockDTO stockDTO) {
-        return new Stock(
-                stockDTO.getId(),
+        LocalDateTime now = LocalDateTime.now();
+        Long id = stockDTO.getId() != null ? stockDTO.getId() : idGenerator.getAndIncrement();
+        StockDTO saved = new StockDTO(
+                id,
                 stockDTO.getDesignName(),
                 stockDTO.getSize(),
                 stockDTO.getType(),
                 stockDTO.getTotalBoxes(),
                 stockDTO.getPricePerBox(),
                 stockDTO.getCategoryId(),
-                null,
-                null
+                stockDTO.getCreatedAt() != null ? stockDTO.getCreatedAt() : now,
+                now
         );
+        stocks.put(id, saved);
+        return saved;
+    }
+
+    public StockDTO updateStock(Long id, StockDTO stockDTO) {
+        StockDTO existing = getStockById(id);
+        StockDTO updated = new StockDTO(
+                existing.getId(),
+                stockDTO.getDesignName(),
+                stockDTO.getSize(),
+                stockDTO.getType(),
+                stockDTO.getTotalBoxes(),
+                stockDTO.getPricePerBox(),
+                stockDTO.getCategoryId(),
+                existing.getCreatedAt(),
+                LocalDateTime.now()
+        );
+        stocks.put(id, updated);
+        return updated;
+    }
+
+    public void deleteStock(Long id) {
+        if (stocks.remove(id) == null) {
+            throw new RuntimeException("Stock not found with id: " + id);
+        }
+    }
+
+    public Integer getTotalStocks() {
+        return stocks.size();
+    }
+
+    public Integer getLowStockCount(Integer threshold) {
+        return (int) stocks.values().stream()
+                .filter(stock -> stock.getTotalBoxes() != null && stock.getTotalBoxes() < threshold)
+                .count();
+    }
+
+    private boolean containsIgnoreCase(String value, String query) {
+        return value != null && value.toLowerCase().contains(query);
     }
 }
